--- a/index.html
+++ b/index.html
@@ -43,9 +43,32 @@
   </div>
 
   <div class="rules">
-    <a href="rules/index.html">
       <p>Kurallar</p>
-    </a>
+  </div>
+  
+  <div class="rules-show">
+    <div class="rules-header">
+      <p>RULES</p>
+        <img src="assets/img/X.png" class="desktop X" alt="">
+    </div>
+    <div class="rules-hero">
+      <img src="assets/img/kagıt.png" class="kagıt" alt="">
+      <div class="left-beats">
+        <p class="beats">Yener</p>
+        <img src="assets/img/sol.png" alt="">
+      </div>
+      <img src="assets/img/makas.png" class="makas" alt="">
+      <div class="down-right-beats">
+        <p class="beats">Yener</p>
+        <img src="assets/img/sag-alt.png" alt="">
+      </div>
+      <img src="assets/img/tas.png" class="tas" alt="">
+      <div class="up-right-beats">
+        <img src="assets/img/sag-ust.png" alt="">
+        <p class="beats">Yener</p>
+      </div>
+    </div>
+    <img src="assets/img/X.png" class="mobile mbX" alt="">
   </div>
 
 </body>
